# npu-aws-lambda-cpp

./: CMakeLists.txt  NPU.pptx  README.md  case.md  compile.md  output.txt
application/: CMakeLists.txt
arch/bucket/: bucket.md
arch/db/creation/: create-table.json
arch/dynamodb/: apiendpoint.md  dynamoDB.json  explained.md
arch/dynamodb/creation/: create-table.json  create.md
docs/: architecture.md
docs/api/: endpoints.md
docs/aws/: AWS_Lambda_CPP_Setup_Guide.md  dynamodb-setup.md  lambda-setup.md  s3-setup.md
examples/: create-role-output.json
iam/policies/: bucket-policy.json  cors-policy.json  create-creation-policy.json
scripts/: cheatsheet.sh  create_creation_api_setup.sh  create_creation_curl.sh  create_creation_lambda_setup.sh  create_creation_update_lambda.sh  setup-dynamodb.sh  setup-s3.sh
src/: CMakeLists.txt
src/common/: CMakeLists.txt
src/common/models/: creation.cpp  creation.hpp
src/common/services/: dynamodb_service.cpp  dynamodb_service.hpp  s3_service.cpp  s3_service.hpp
src/functions/: CMakeLists.txt
src/functions/create_creation/: CMakeLists.txt  creation_handler.cpp  creation_handler.hpp  main.cpp
